# kreuzakt

./: .dockerignore  .env.local.example  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  biome.json  docker-compose.yml  next.config.ts  package.json  tsconfig.json  vitest.config.ts
.cursor/rules/: File-Structure-Content-Ordering.mdc
.github/workflows/: ci.yml  publish-docker.yml
.storybook/: main.ts
eval/: config.ts  evaluate.ts  extract.ts  judge.ts  report.ts  types.ts
eval/fixtures/: .gitignore
rust/kreuzakt-kreuzberg/: Cargo.toml
rust/kreuzakt-kreuzberg/src/: main.rs
scripts/: seed.ts
spec/: 00-overview.md  01-architecture.md  02-features.md  03-screens.md  04-api-and-mcp.md  05-roadmap.md  06-ocr-eval.md
src/: instrumentation-node.ts  instrumentation.ts
src/app/: error.tsx  globals.css  layout.tsx  page.tsx
src/components/: AppHeaderActions.tsx  DocumentCard.stories.tsx  DocumentCard.tsx  DocumentViewerClient.tsx  DocumentViewerPage.stories.tsx  DocumentViewerPage.tsx  FileDropSurface.tsx  McpSetupSection.tsx  Pagination.tsx  PaperlessImport.tsx  PreferredLanguageSetting.tsx  ProcessingQueue.stories.tsx  ProcessingQueue.tsx  ReindexAllPanel.tsx  SearchBar.stories.tsx  SearchBar.tsx  SearchPage.stories.tsx  SearchPage.tsx  SearchPageClient.tsx  SearchResultCard.stories.tsx  SearchResultCard.tsx  Settings.stories.tsx  SettingsPage.stories.tsx  SettingsPage.tsx  SystemStatusPage.tsx  UploadButton.tsx  useIngestUpload.ts
src/lib/: api.ts  config.ts  document-card-props.ts  documents.ts  exportText.test.ts  exportText.ts  fileResponse.ts  (+13 more)
(+49 files in other folders)
