[package]
name = "kreuzakt-kreuzberg"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
kreuzberg = { version = "=4.9.8", features = [
  "archives",
  "bundled-pdfium",
  "email",
  "excel",
  "html",
  "liter-llm",
  "ocr",
  "office",
  "paddle-ocr",
  "pdf-oxide",
  "quality",
  "xml",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
